public/index.css
@import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

:root {
  --navbar-color: #152d35;
  --text-color-1: #fff;
  --back-color-contact: #345b63;
  --backg-color-input-container: #d4ecdd;
  --backg-color-chat-arear: #f3f1f5;
  --sender-text-color: #c8c6c6;
  --cancel-btn-backg: #ff4848;
  --cancel-btn-backg-on-hover: #fe8f8f;
  --add-btn-backg: #5de08f;
  --add-btn-backg-on-hover: #97e0b3;
  --notifiy-err-backg: #fcd2d1;
  --notifiy-msg-backg: #dfeeea;
  --bottom-line-color: #acacac;
  --send-msg-back-color: #3DB2FF;
  --chat-background-image: url("https://www.transparenttextures.com/patterns/connected.png");
  --contact-background-image: url("https://www.transparenttextures.com/patterns/az-subtle.png");
}

html {
  height: 100vh;
  font-family: "Poppins", sans-serif;
}

body {
  height: 100vh;
  position: relative;
}

.mt-2 {
  margin-top: 2rem;
}

.mt-05{
 margin-top: 0.5rem;
}
.ml-05 {
  margin-left: 0.5rem;
}

.active {
  color: var(--navbar-color) !important;
  position: relative;
  z-index: 1;
}

/* pretty radio */
label>input[type="checkbox"] {
  display: none;
}

label>input[type="checkbox"]+*::before {
  content: "";
  display: inline-block;
  vertical-align: bottom;
  width: 1rem;
  height: 1rem;
  margin-right: 0.8rem;
  border-radius: 10%;
  border-style: solid;
  border-width: 0.1rem;
  border-color: gray;
  flex-shrink: 0;
}

label>input[type="checkbox"]:checked+* {
  color: teal;
}

label>input[type="checkbox"]:checked+*::before {
  content: "✓";
  color: white;
  background: teal;
  border-color: teal;
  text-align: center;
}


.checkbox-wrapper {
  display: flex;
  align-items: center;
  background-color: var(--text-color-1);
  border-bottom: 1px solid;
  height: 4rem;

}

.checkbox-wrapper label {
  padding: 1rem 1rem;
  display: inline-block;
  width: 100%;
  height: 100%;
}

.active::after {
  content: "";
  position: absolute;
  width: 100%;
  height: 100%;
  background-color: var(--text-color-1) !important;
  border-radius: 0.7rem 0.7rem 0 0;
  z-index: -2;
}

.on-conversation {
  /*grid-template-rows: 0.5fr 5fr 0.3fr !important;*/
}

.user-ID {
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: var(--backg-color-input-container);
  font-size: 1rem;
}

.user-ID span {
  padding-left: 0.5rem;
  color: var(--bottom-line-color);
}

.border-radius-bottom-l {
  border-radius: 0 0 0 0.7rem !important;
}

.border-radius-bottom-r {
  border-radius: 0 0 0.7rem 0 !important;
}

.icon-bobble {
  align-items: center;
  background-color: var(--back-color-contact);
  border-radius: 50%;
  color: var(--text-color-1);
  display: flex;
  justify-content: center;
  height: 3.5rem;
  width: 3.5rem;
  position: absolute;
  padding: 1rem;
  right: 1rem;
  bottom: 2.8rem;
  z-index: 2;
  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
    rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
    rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
}

.btn {
  padding: 0.5rem;
  border: none;
  cursor: pointer;
  color: var(--backg-color-chat-arear);
  background-color: transparent;
}


.notifiy-contaner {
  width: 100%;
  display: flex;
  justify-content: center;
  position: absolute;
  z-index: 4;
  top: 30px;
  transition: all 100ms ease-in-out;
  transform: translateY(-100px);
  opacity: 0;
}

.notifiy-container {
  transform: translateY(0);
  opacity: 1;
}

.notifiy-err {
  border-radius: 0.5rem;
  display: flex;
  justify-content: center;
  max-width: 450px;

  box-shadow: 1px 5px 5px rgba(0, 0, 0, 0.164), 1px 3px 3px rgba(0, 0, 0, 0.103),
    1px 4px 2px rgba(0, 0, 0, 0.041);
}

.notifiy-err p {
  font-size: 17px;
  padding: 0.5rem;
}

.notifiy-err-color-red {
  background-color: var(--notifiy-err-backg);
  color: var(--navbar-color);
}

.notifiy-msg-color {
  background-color: var(--notifiy-msg-backg);
  color: var(--navbar-color);
}

.selected {
  position: relative;
  overflow: hidden;
}

.selected::before {
  background-color: var(--add-btn-backg);
  opacity: 1;
  transform: translateX(0);
}

.create-group span,
.add-contact span,
.all-groups span,
.all-msg span {
  margin-right: 0.5rem;
  font-size: 1.2rem;
}

.input-container,
.navbar,
.cont-body-container {
  padding: 0.5rem;
}

.msg-arear,
.contact-container,
.msg-container {
  height: 100vh;
}

.login-display {
  position: absolute;
  top: 0;
  width: 100%;
  transition: all 100ms ease-in-out;
  transform: scale(0, 0);
  opacity: 0;
}

.show-login-display {
  transform: scale(1, 1);
  opacity: 1;
}

.login-container {
  height: 100vh;
  display: flex;
  justify-content: center;
  align-items: center;
  background: var(--backg-color-chat-arear);
  background-image: var(--chat-background-image);
}

.form-container {
  border-radius: 0.5rem;
  margin: 2rem auto;
  width: 30rem;
  overflow: hidden;
}

.form-title {
  background-color: #082032;
  color: #fff;
  padding: 2rem 1rem;
}

.form-wrapper {
  background-color: #fff;
  padding: 5rem 2rem 3rem 2rem;
}

.form-control {
  border: solid rgb(161, 159, 159) 1px;
  border-radius: 0.325rem;
  width: 100%;
  height: 3rem;
  margin-bottom: 1rem;
  padding: 0 0.5rem;
  font-size: 18px;
  outline: 0;
}

.form-control:focus {
  border: solid #082032 1px;
}

.form-btn {
  background-color: #fff;
  border: solid #082032 1px;
  border-radius: 0.325rem;
  width: 100%;
  padding: 0.8rem;
  text-align: center;
  font-size: 20px;
}

.form-btn:hover {
  background-color: #082032;
  color: #fff;
}

.form-btn-link {
  border: none;
  background-color: transparent;
  color: #082032;
  font-size: 20px;
}

.form-btn-link:hover {
  text-decoration: underline;
}

.navbar {
  background-color: var(--navbar-color);
  color: var(--text-color-1);
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100%;
  height: 4rem;
}
/* ... */

